# openvmm

./: .gitattributes
.github/instructions/: vmm-tests.instructions.md
.github/skills/openvmm-ci-investigation/: SKILL.md
.github/skills/vmm-tests/: SKILL.md
.github/workflows/: openvmm-ci.yaml  openvmm-pr-release.yaml  openvmm-pr.yaml  upload-petri-results.yml
ci-flowey/: openvmm-pr.yaml
flowey/flowey_lib_common/src/: download_gh_release.rs
flowey/flowey_lib_hvlite/src/: build_and_test_vmgs_lib.rs  build_guest_test_uefi.rs  build_hypestv.rs  build_igvmfilegen.rs  build_nextest_unit_tests.rs  build_nextest_vmm_tests.rs  build_ohcldiag_dev.rs  build_openhcl_boot.rs  build_openhcl_igvm_from_recipe.rs  build_openhcl_initrd.rs  build_openvmm.rs  build_openvmm_hcl.rs  build_openvmm_vhost.rs  build_pipette.rs  build_prep_steps.rs  build_sidecar.rs  build_test_igvm_agent_rpc_server.rs  build_tmk_vmm.rs  build_tmks.rs  build_tpm_guest_tests.rs  build_vmfirmwareigvm_dll.rs  build_vmgstool.rs  build_xtask.rs  common.rs  download_release_igvm_files_from_gh.rs  download_uefi_mu_msvm.rs  init_openvmm_magicpath_openhcl_sysroot.rs  init_openvmm_magicpath_openvmm_deps.rs  init_openvmm_magicpath_release_openhcl_igvm.rs  init_openvmm_magicpath_uefi_mu_msvm.rs  lib.rs  (+5 more)
nix/: uefi_mu_msvm.nix
openvmm/openvmm_core/: Cargo.toml
openvmm/openvmm_entry/: Cargo.toml
vm/devices/pci/vfio_assigned_device/: Cargo.toml
vm/devices/pci/vfio_assigned_device/src/: lib.rs  manager.rs  resolver.rs
vm/vmcore/: Cargo.toml
vmm_core/src/: device_builder.rs
vmm_core/virt_mshv/: Cargo.toml
(+81 files in other folders)
